--- a/references.bib
+++ b/references.bib
@@ -7,7 +7,7 @@
   volume = {2},
   number = {1},
   pages = {1--9},
-  publisher = {{Nature Publishing Group}},
+  publisher = {Nature Publishing Group},
   issn = {2731-9814},
   doi = {10.1038/s44168-023-00055-4},
   url = {https://www.nature.com/articles/s44168-023-00055-4},
@@ -71,7 +71,7 @@
   volume = {13},
   number = {9},
   pages = {1791},
-  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  publisher = {Multidisciplinary Digital Publishing Institute},
   issn = {2072-4292},
   doi = {10.3390/rs13091791},
   url = {https://www.mdpi.com/2072-4292/13/9/1791},
@@ -104,7 +104,7 @@
   volume = {15},
   number = {12},
   pages = {3110},
-  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  publisher = {Multidisciplinary Digital Publishing Institute},
   issn = {2072-4292},
   doi = {10.3390/rs15123110},
   url = {https://www.mdpi.com/2072-4292/15/12/3110},
@@ -142,7 +142,7 @@
   volume = {2},
   number = {2},
   pages = {469--484},
-  publisher = {{Routledge}},
+  publisher = {Routledge},
   issn = {2373-566X},
   doi = {10.1080/2373566X.2016.1217741},
   url = {https://doi.org/10.1080/2373566X.2016.1217741},
@@ -160,7 +160,7 @@
   urldate = {2024-02-01},
   abstract = {NDVI quantifies vegetation health using near-infrared (which is reflected by vegetation) and red light (which is absorbed by vegetation).},
   langid = {american},
-  organization = {{GIS Geography}}
+  organization = {GIS Geography}
 }
 
 @article{heidenSoilReflectanceComposites2022,
@@ -171,7 +171,7 @@
   volume = {14},
   number = {18},
   pages = {4526},
-  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  publisher = {Multidisciplinary Digital Publishing Institute},
   issn = {2072-4292},
   doi = {10.3390/rs14184526},
   url = {https://www.mdpi.com/2072-4292/14/18/4526},
@@ -190,7 +190,7 @@
   urldate = {2024-02-02},
   abstract = {LiDAR is used to collect data for Disaster response. It gives datasets with high accuracy and to monitor disasters. LiDar is used for fast acquisition.},
   langid = {american},
-  organization = {{Agira Technologies}},
+  organization = {Agira Technologies},
   file = {C:\Users\shaun\Zotero\storage\RBVSYWNC\how-lidar-is-used-in-disaster-response.html}
 }
 
@@ -244,7 +244,7 @@
   volume = {51},
   number = {1},
   pages = {932--944},
-  publisher = {{Taylor \& Francis}},
+  publisher = {Taylor \& Francis},
   issn = {null},
   doi = {10.1080/22797254.2018.1521250},
   url = {https://doi.org/10.1080/22797254.2018.1521250},
@@ -290,7 +290,7 @@
   url = {https://neptis.org/publications/chapters/measuring-growth-using-satellite-imagery-and-spatial-analysis},
   urldate = {2024-01-28},
   langid = {english},
-  organization = {{Neptis Foundation}},
+  organization = {Neptis Foundation},
   file = {C:\Users\shaun\Zotero\storage\V3TNWIAI\measuring-growth-using-satellite-imagery-and-spatial-analysis.html}
 }
 
@@ -302,7 +302,7 @@
   volume = {14},
   number = {10},
   pages = {2295},
-  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  publisher = {Multidisciplinary Digital Publishing Institute},
   issn = {2072-4292},
   doi = {10.3390/rs14102295},
   url = {https://www.mdpi.com/2072-4292/14/10/2295},
@@ -370,7 +370,7 @@
   urldate = {2024-02-02},
   abstract = {The Digital Underground Project is a research-to-application initiative on subsurface utility mapping. It aims to support the establishment of a reliable digital twin – an accurate and},
   langid = {american},
-  organization = {{Geospatial World}},
+  organization = {Geospatial World},
   file = {C:\Users\shaun\Zotero\storage\6HM6JXPH\singapore-goes-underground-with-the-digital-underground-project-2.html}
 }
 
@@ -474,7 +474,7 @@
   volume = {13},
   number = {21},
   pages = {4439},
-  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  publisher = {Multidisciplinary Digital Publishing Institute},
   issn = {2072-4292},
   doi = {10.3390/rs13214439},
   url = {https://www.mdpi.com/2072-4292/13/21/4439},
@@ -494,7 +494,7 @@
   volume = {13},
   number = {24},
   pages = {5115},
-  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  publisher = {Multidisciplinary Digital Publishing Institute},
   issn = {2072-4292},
   doi = {10.3390/rs13245115},
   url = {https://www.mdpi.com/2072-4292/13/24/5115},
@@ -514,7 +514,7 @@
   volume = {15},
   number = {14},
   pages = {3464},
-  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  publisher = {Multidisciplinary Digital Publishing Institute},
   issn = {2072-4292},
   doi = {10.3390/rs15143464},
   url = {https://www.mdpi.com/2072-4292/15/14/3464},
@@ -535,7 +535,7 @@
   volume = {14},
   number = {12},
   pages = {2917},
-  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  publisher = {Multidisciplinary Digital Publishing Institute},
   issn = {2072-4292},
   doi = {10.3390/rs14122917},
   url = {https://www.mdpi.com/2072-4292/14/12/2917},
@@ -589,7 +589,7 @@
   volume = {13},
   number = {16},
   pages = {3141},
-  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  publisher = {Multidisciplinary Digital Publishing Institute},
   issn = {2072-4292},
   doi = {10.3390/rs13163141},
   url = {https://www.mdpi.com/2072-4292/13/16/3141},
