--- a/references.bib
+++ b/references.bib
@@ -159,6 +159,20 @@
   file = {C:\Users\shaun\Zotero\storage\A9P7S34N\Earth Science Data Systems - 2019 - What is Remote Sensing  Earthdata.html}
 }
 
+@online{earthsciencedatasystemsWhatSyntheticAperture2020,
+  type = {Backgrounder},
+  title = {What Is {{Synthetic Aperture Radar}}? | {{Earthdata}}},
+  shorttitle = {What Is {{Synthetic Aperture Radar}}?},
+  author = {family=Earth Science Data Systems, given=NASA, given-i=NASA},
+  date = {2020-04-10},
+  publisher = {Earth Science Data Systems, NASA},
+  url = {https://www.earthdata.nasa.gov/learn/backgrounders/what-is-sar},
+  urldate = {2024-03-12},
+  abstract = {Background information on synthetic aperture radar, with details on wavelength and frequency, polarization, scattering mechanisms, and interferometry.},
+  langid = {english},
+  file = {C:\Users\shaun\Zotero\storage\5MJYUFGZ\what-is-sar.html}
+}
+
 @article{ejazDroughtMonitoringUsing2023,
   title = {Drought {{Monitoring Using Landsat Derived Indices}} and {{Google Earth Engine Platform}}: {{A Case Study}} from {{Al-Lith Watershed}}, {{Kingdom}} of {{Saudi Arabia}}},
   shorttitle = {Drought {{Monitoring Using Landsat Derived Indices}} and {{Google Earth Engine Platform}}},
@@ -315,6 +329,13 @@
   url = {https://www.hutton.ac.uk/news/hutton-soil-scientists-help-develop-first-global-soil-organic-carbon-map},
   urldate = {2024-02-15},
   file = {C:\Users\shaun\Zotero\storage\AZA2N8DW\hutton-soil-scientists-help-develop-first-global-soil-organic-carbon-map.html}
+}
+
+@online{InterferometryGetKnow,
+  title = {Interferometry | {{Get}} to {{Know SAR}} – {{NASA-ISRO SAR Mission}} ({{NISAR}})},
+  url = {https://nisar.jpl.nasa.gov/mission/get-to-know-sar/interferometry/},
+  urldate = {2024-03-12},
+  file = {C:\Users\shaun\Zotero\storage\H8MH3MBY\interferometry.html}
 }
 
 @article{jeanCombiningSatelliteImagery2016,
