--- a/week8.qmd
+++ b/week8.qmd
@@ -22,7 +22,7 @@ So far, we have examined various methods to classify pixels into different class
 
 There are many ways to measure the accuracy of an ML model. However, some of the most popular ones frequently employed in literature are user's accuracy, producer's accuracy, overall accuracy and F1 score
 
-![Source: [@tutorials]](images/clipboard-4177226107.png){fig-align="center" width="407"}
+![Source: [@tutorialsInterpretingImagesAccuracy]](images/clipboard-4177226107.png){fig-align="center" width="407"}
 
 -   **Producer’s accuracy (recall)** is defined as the fraction of correctly classified pixels `TP` compared to ground truth data `TP+FN`, loosely how many % of the actual values are correctly classified. *Error of omission* is the inverse of this.
 
